// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c otlp -n datadog -E TELEMETRY_HEADER_OTLP_DATADOG_DD_API_KEY=test-value -D test/e2e/exports/fr-config-manager/cloud": should fail to import otlp telemetry 1`] = `
"[32mA new version of frodo is available.
Please run 'frodo -v' for more details.
[39mExperimental feature in use: 'frodo config-manager push telemetry'. This feature may change without notice.
✔ Successfully read 1 telemetry exporter(s).
Error importing telemetry exporters
  Error updating telemetry exporter
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/environment/telemetry/otlp/datadog
      Status: 409
      Code: ERR_BAD_REQUEST
      Message: maximum number of exporters reached
"
`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c otlp -n datadog -E TELEMETRY_HEADER_OTLP_DATADOG_DD_API_KEY=test-value -D test/e2e/exports/fr-config-manager/cloud": should fail to import otlp telemetry 2`] = `1`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c splunk -D test/e2e/exports/fr-config-manager/cloud": should fail to import splunk telemetry 1`] = `""`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c splunk -D test/e2e/exports/fr-config-manager/cloud": should fail to import splunk telemetry 2`] = `
"[32mA new version of frodo is available.
Please run 'frodo -v' for more details.
[39mExperimental feature in use: 'frodo config-manager push telemetry'. This feature may change without notice.
✔ Successfully read 1 telemetry exporter(s).
Progress indicator 21cadce3-505d-4edb-967b-5339051be81f not found.
"
`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c splunk -n test -D test/e2e/exports/fr-config-manager/cloud": should fail to import splunk telemetry 1`] = `
"[32mA new version of frodo is available.
Please run 'frodo -v' for more details.
[39mExperimental feature in use: 'frodo config-manager push telemetry'. This feature may change without notice.
✔ Successfully read 1 telemetry exporter(s).
Error importing telemetry exporters
  Error updating telemetry exporter
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/environment/telemetry/splunk/frodo-test-splunk-1
      Status: 409
      Code: ERR_BAD_REQUEST
      Message: maximum number of exporters reached
"
`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -c splunk -n test -D test/e2e/exports/fr-config-manager/cloud": should fail to import splunk telemetry 2`] = `1`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -n test-otlp -E TELEMETRY_HEADER_OTLP_TEST_OTLP_API_KEY=test-value -E TELEMETRY_HEADER_OTLP_TEST_OTLP_API_SECRET=test-value -D test/e2e/exports/fr-config-manager/cloud": should push telemetry to cloud 1`] = `""`;

exports[`frodo config-manager push telemetry "frodo config-manager push telemetry -n test-otlp -E TELEMETRY_HEADER_OTLP_TEST_OTLP_API_KEY=test-value -E TELEMETRY_HEADER_OTLP_TEST_OTLP_API_SECRET=test-value -D test/e2e/exports/fr-config-manager/cloud": should push telemetry to cloud 2`] = `
"[32mA new version of frodo is available.
Please run 'frodo -v' for more details.
[39mExperimental feature in use: 'frodo config-manager push telemetry'. This feature may change without notice.
✔ Successfully read 1 telemetry exporter(s).
Progress indicator f34d3e8a-de5d-49c8-99df-2451d920f416 not found.
"
`;
